--- a/src/styles/blocks/_homepage.scss
+++ b/src/styles/blocks/_homepage.scss
@@ -13,10 +13,6 @@
 
 .homepage-container {
   @include container;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // height: 100vh;
 }
 
 .homepage-wrap {
@@ -28,13 +24,37 @@
 }
 
 .homepage-title {
+  margin-bottom: 50px;
+  font-size: 72px;
+  font-weight: 700;
+  text-align: center;
   color: $color-light;
 }
 
 .homepage-subtitle {
+  margin-bottom: 55px;
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
   color: $color-light;
 }
 
 .homepage-btn {
+  display: inline-block;
+  padding: 15px 40px;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+  text-decoration: none;
   color: $color-light;
+  border: 2px solid $color-light;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 0.3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+
+  &:hover {
+    background-color: $color-light;
+    color: $color-dark;
+  }
 }
