--- a/src/styles/blocks/_homepage.scss
+++ b/src/styles/blocks/_homepage.scss
@@ -24,37 +24,38 @@
 }
 
 .homepage-title {
-  margin-bottom: 50px;
-  font-size: 72px;
+  margin-bottom: 40px;
+  font-size: 68px;
   font-weight: 700;
   text-align: center;
-  color: $color-light;
+  color: #fff;
 }
 
 .homepage-subtitle {
-  margin-bottom: 55px;
-  font-size: 24px;
+  margin-bottom: 50px;
+  font-size: 20px;
   font-weight: 300;
+  line-height: 1.5em;
   text-align: center;
-  color: $color-light;
+  color: #fff;
 }
 
 .homepage-btn {
   display: inline-block;
-  padding: 15px 40px;
-  font-size: 18px;
+  padding: 12px 37px;
+  font-size: 16px;
   font-weight: 500;
   letter-spacing: .1em;
   text-transform: uppercase;
   text-decoration: none;
   color: $color-light;
-  border: 2px solid $color-light;
+  border: 2px solid #fff;
   border-radius: 3px;
   cursor: pointer;
   transition: all 0.3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
 
   &:hover {
-    background-color: $color-light;
+    background-color: #fff;
     color: $color-dark;
   }
 }
