--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -2,8 +2,9 @@
 $font: 'Albert Sans', sans-serif;
 
 // colors
-$color-light: #fff;
+$color-light: #e4e7e7;
 $color-dark: #4a4a4a;
+$color-accent: #ce414e;
 
 // indents
 $gap: 30px;
