finished header and nav

--- a/src/styles/blocks/_homepage.scss
+++ b/src/styles/blocks/_homepage.scss
@@ -48,7 +48,7 @@
   letter-spacing: .1em;
   text-transform: uppercase;
   text-decoration: none;
-  color: $color-light;
+  color: #fff;
   border: 2px solid #fff;
   border-radius: 3px;
   cursor: pointer;
