--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,5 +6,8 @@
 
 // blocks
 @import "blocks/_homepage";
+@import "blocks/_header";
+@import "blocks/_nav";
+@import "blocks/_selected-works";
 
 //plugins
