--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,9 +1,15 @@
 .header {
-  padding: 35px 0;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // z-index: 888;
+  // width: 100%;
+  padding: 30px 0;
+  background-color: $color-light;
 }
 
 .header-container {
-  @include container;
+  @include container();
 }
 
 .header-wrap {
