--- a/src/styles/blocks/_selected-works.scss
+++ b/src/styles/blocks/_selected-works.scss
@@ -18,11 +18,8 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-top: 65px;
-  margin-bottom: 85px;
-  margin-left: -15px;
-  margin-right: -15px;
-  // border: 1px solid aqua;
+  margin: 65px -15px 100px -15px;
+  border: 1px solid aqua;
 }
 
 .selected-works-item {
