--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,5 +9,7 @@
 @import "blocks/_header";
 @import "blocks/_nav";
 @import "blocks/_selected-works";
+@import "blocks/_footer";
+@import "blocks/_social";
 
 //plugins
