finished about page

--- a/src/styles/blocks/_selected-works.scss
+++ b/src/styles/blocks/_selected-works.scss
@@ -1,6 +1,6 @@
 .selected-works-cover {
   @include cover();
-  background-image: url("../images/sw-cover4.jpg");
+  background-image: url("../images/sw-cover.jpg");
 }
 
 .selected-works-container {
