--- a/src/styles/blocks/_social.scss
+++ b/src/styles/blocks/_social.scss
@@ -4,14 +4,19 @@
 }
 
 .social-item {
-  margin-left: 10px;
+  margin: 0 5px 0 5px;
 }
 
 .social-link {
   display: block;
-  width: 26px;
-  height: 26px;
+  width: 24px;
+  height: 24px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  opacity: 0.8;
+
+  &:hover {
+    opacity: 1;
+  }
 }
