finished exhibition and press pages

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,5 +12,7 @@
 @import "blocks/_footer";
 @import "blocks/_social";
 @import "blocks/_about";
+@import "blocks/_exhibitions";
+@import "blocks/_press";
 
 //plugins
