--- a/src/styles/blocks/_about.scss
+++ b/src/styles/blocks/_about.scss
@@ -12,14 +12,12 @@
   font-size: 30px;
   font-weight: 600;
   text-align: center;
-  // border: 1px solid aqua;
 }
 
 .about-wrap {
   display: flex;
   justify-content: space-between;
   margin-bottom: 85px;
-  // border: 1px solid aqua;
 }
 
 .about-info {
@@ -35,15 +33,10 @@
 
 .about-list {
   margin-bottom: 18px;
-  margin-left: 20px;
   font-size: 18px;
   font-weight: 300;
   line-height: 30px;
-  // list-style: none;
-}
-
-.list-item {
-
+  list-style-position: inside;
 }
 
 .about-link {
@@ -58,9 +51,4 @@
 
 .about-avatar {
   flex-basis: 30%;
-}
-
-.about-pic {
-  // margin-left: 30px;
-  // max-height: 400px;
 }
