fixed header, parallax for cover section, updated images resolution

--- a/src/styles/blocks/_about.scss
+++ b/src/styles/blocks/_about.scss
@@ -1,6 +1,7 @@
 .about-cover {
   @include cover();
   background-image: url("../images/about-cover.jpg");
+  background-position: bottom;
 }
 
 .about-container {
