--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,9 +1,9 @@
 .header {
-  // position: fixed;
-  // top: 0;
-  // left: 0;
-  // z-index: 888;
-  // width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 888;
+  width: 100%;
   padding: 30px 0;
   background-color: $color-light;
 }
