--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@
 @import "blocks/_header";
 @import "blocks/_nav";
 @import "blocks/_selected-works";
+@import "blocks/_better-days";
 @import "blocks/_grace";
 @import "blocks/_metamorphoses";
 @import "blocks/_footer";
