--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/_nav";
 @import "blocks/_selected-works";
 @import "blocks/_better-days";
+@import "blocks/_inner-landscapes";
 @import "blocks/_grace";
 @import "blocks/_metamorphoses";
 @import "blocks/_footer";
