finished lost in turkey page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@
 @import "blocks/_header";
 @import "blocks/_nav";
 @import "blocks/_selected-works";
+@import "blocks/_lost-in-turkey";
 @import "blocks/_better-days";
 @import "blocks/_inner-landscapes";
 @import "blocks/_grace";
