finished dropdown menu for projects link, animation for dropdown menu,installed aos plugin

--- a/src/styles/blocks/_better-days.scss
+++ b/src/styles/blocks/_better-days.scss
@@ -1,7 +1,7 @@
 .better-days-cover {
   @include cover();
   background-image: url("../images/bd-cover.jpg");
-  background-position: bottom;
+  // background-position: bottom;
 }
 
 .better-days-container {
