--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -15,10 +15,11 @@
 }
 
 .footer-copyright {
-  margin-bottom: 18px;
-  font-size: 20px;
+  margin-bottom: 20px;
+  font-size: 18px;
   font-weight: 400;
   color: $color-dark;
-  // text-align: center;
+  opacity: .8;
+  text-align: center;
 }
 
