animation for homepage, selected works, metamorphoses, press

--- a/src/styles/blocks/_social.scss
+++ b/src/styles/blocks/_social.scss
@@ -14,7 +14,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  opacity: 0.8;
+  opacity: .6;
 
   &:hover {
     opacity: 1;
