--- a/src/styles/blocks/_homepage.scss
+++ b/src/styles/blocks/_homepage.scss
@@ -52,7 +52,7 @@
   border: 2px solid $color-light;
   border-radius: 3px;
   cursor: pointer;
-  transition: all 0.3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+  transition: all .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
 
   &:hover {
     background-color: $color-light;
