--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -6,6 +6,14 @@
   width: 100%;
   padding: 30px 0;
   background-color: $color-light;
+
+  @media (max-width: $tablet-max) {
+    padding: 25px 0;
+  }
+
+  @media (max-width: $mobile-max) {
+    // padding: 20px 0;
+  }
 }
 
 .header-container {
@@ -23,4 +31,32 @@
   font-weight: 700;
   color: $color-dark;
   text-decoration: none;
+
+  @media (max-width: $tablet-max) {
+    font-size: 26px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 24px;
+  }
+}
+
+.header-burger {
+  display: none;
+
+  @media (max-width: $tablet-max) {
+    display: block;
+    width: 25px;
+    height: 25px;
+    border: none;
+    background: transparent;
+    background-image: url(../images/header-burger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
