--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -4,38 +4,26 @@
   // }
 
   @media (max-width: $tablet-max) {
-    display: none;
+    // display: none; //не используется из-за невозможности задать transition
     position: absolute;
     top: 100%;
-    right: 0;
-    width: 60%;
+    right: -100%;
+    width: 65%;
     height: 100vh;
     padding: 30px 0;
-    background-color: $color-light;
-    background: rgba($color-light, .9);
+    background: rgba($color-light, .98);
     overflow: auto;
-    animation: dropdownMenu .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
-
-    @keyframes dropdownMenu {
-      from{
-        opacity: 0;
-        transform: translate(15px, 0);
-      }
-
-      to{
-        opacity: 1;
-        transform: translate(0, 0);
-      }
-    }
+    transition: right .4s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
   }
 
   @media (max-width: $mobile-max) {
-    width: 80%;
+    width: 90%;
     padding: 20px 0;
   }
 
   &.active {
-    display: block;
+    // display: block; //не используется из-за невозможности задать transition
+    right: 0;
   } // открываем и закрываем меню бургер через добавление класса в js
 }
 
