--- a/src/styles/blocks/_social.scss
+++ b/src/styles/blocks/_social.scss
@@ -19,4 +19,13 @@
   &:hover {
     opacity: 1;
   }
+
+  @media (max-width: $tablet-max) {
+
+  }
+
+  @media (max-width: $mobile-max) {
+    width: 23px;
+    height: 23px;
+  }
 }
