--- a/src/styles/blocks/_about.scss
+++ b/src/styles/blocks/_about.scss
@@ -2,6 +2,14 @@
   @include cover();
   background-image: url("../images/about-cover.jpg");
   background-position: bottom;
+
+  @media (max-width: $tablet-max) {
+    background-attachment: scroll;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .about-container {
