--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -12,14 +12,31 @@
   flex-direction: column;
   align-items: center;
   // justify-content: space-between;
+
+  @media (max-width: $tablet-max) {
+
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .footer-copyright {
   margin-bottom: 20px;
   font-size: 18px;
   font-weight: 400;
+  line-height: 1.5em;
   color: $color-dark;
   opacity: .6;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 17px;
+  }
 }
 
