adaptive for about, press, exhibition pages, edited readme file

--- a/src/styles/blocks/_exhibitions.scss
+++ b/src/styles/blocks/_exhibitions.scss
@@ -1,11 +1,27 @@
 .exhibitions-cover {
   @include cover();
   background-image: url("../images/ex-cover.jpg");
+
+  @media (max-width: $tablet-max) {
+    background-attachment: scroll;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .exhibitions-container {
   @include container();
   margin-bottom: 100px;
+
+  @media (max-width: $tablet-max) {
+
+  }
+
+  @media (max-width: $mobile-max) {
+    margin-bottom: 60px;
+  }
 }
 
 .exhibitions-title {
@@ -13,6 +29,15 @@
   font-size: 30px;
   font-weight: 600;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    margin: 60px 0;
+    font-size: 26px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 24px;
+  }
 }
 
 .exhibitions-text {
