--- a/src/styles/blocks/_about.scss
+++ b/src/styles/blocks/_about.scss
@@ -21,12 +21,30 @@
   font-size: 30px;
   font-weight: 600;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    margin: 60px 0;
+    font-size: 26px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 24px;
+  }
 }
 
 .about-wrap {
   display: flex;
   justify-content: space-between;
   margin-bottom: 85px;
+
+  @media (max-width: $tablet-max) {
+    flex-direction: column-reverse;
+    margin-bottom: 60px;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .about-info {
@@ -60,4 +78,14 @@
 
 .about-avatar {
   flex-basis: 30%;
+
+  @media (max-width: $tablet-max) {
+    align-self: center;
+    margin-bottom: 40px;
+    max-width: 350px;
+  }
+
+  @media (max-width: $mobile-max) {
+    max-width: 250px;
+  }
 }
