--- a/src/styles/blocks/_metamorphoses.scss
+++ b/src/styles/blocks/_metamorphoses.scss
@@ -1,6 +1,14 @@
 .metamorphoses-cover {
   @include cover();
   background-image: url("../images/meta-cover.jpg");
+
+  @media (max-width: $tablet-max) {
+    background-attachment: scroll;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .metamorphoses-container {
@@ -12,6 +20,15 @@
   font-size: 30px;
   font-weight: 600;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    margin-top: 60px;
+    font-size: 26px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 24px;
+  }
 }
 
 .metamorphoses-desc {
@@ -20,6 +37,15 @@
   font-weight: 300;
   line-height: 30px;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    margin-top: 25px;
+
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .metamorphoses-gallery {
@@ -27,15 +53,40 @@
   flex-wrap: wrap;
   align-items: center;
   margin: 65px -15px 100px -15px;
+
+  @media (max-width: $tablet-max) {
+    margin: 40px -20px 60px -20px;
+  }
+
+  @media (max-width: $mobile-max) {
+    margin-bottom: 40px;
+  }
 }
 
 .metamorphoses-item {
   flex-basis: 33.33%;
   padding: 15px;
+
+  @media (max-width: $tablet-max) {
+    flex-basis: 50%;
+    padding: 20px;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .metamorphoses-img {
   margin: 0 auto;
   max-height: 400px;
   object-fit: contain;
+
+  @media (max-width: $tablet-max) {
+    max-height: 300px;
+  }
+
+  @media (max-width: $mobile-max) {
+    max-height: 200px;
+  }
 }
