--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -18,7 +18,7 @@
 
   @media (max-width: $mobile-max) {
     width: 90%;
-    padding: 20px 0;
+    padding: 30px 0;
   }
 
   &.active {
@@ -51,7 +51,7 @@
   }
 
   @media (max-width: $mobile-max) {
-    margin-left: 35px;
+    margin-left: 40px;
     padding: 7px 0;
   }
 }
@@ -71,7 +71,7 @@
   }
 
   @media (max-width: $mobile-max) {
-    font-size: 20px;
+    font-size: 22px;
   }
 }
 
@@ -138,6 +138,7 @@
 
 .nav-submenu-link {
   font-size: 18px;
+  line-height: 1.5em;
   color: $color-dark;
   text-decoration: none;
   transition: all .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
@@ -151,6 +152,6 @@
   }
 
   @media (max-width: $mobile-max) {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
