--- a/src/styles/blocks/_grace.scss
+++ b/src/styles/blocks/_grace.scss
@@ -2,6 +2,14 @@
   @include cover();
   background-image: url("../images/gr-cover.jpg");
   background-position: bottom;
+
+  @media (max-width: $tablet-max) {
+    background-attachment: scroll;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .grace-container {
@@ -13,6 +21,15 @@
   font-size: 30px;
   font-weight: 600;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    margin-top: 60px;
+    font-size: 26px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 24px;
+  }
 }
 
 .grace-desc {
@@ -21,6 +38,15 @@
   font-weight: 300;
   line-height: 30px;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    margin-top: 25px;
+
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .grace-gallery {
@@ -28,15 +54,40 @@
   flex-wrap: wrap;
   align-items: center;
   margin: 65px -15px 100px -15px;
+
+  @media (max-width: $tablet-max) {
+    margin: 40px -20px 60px -20px;
+  }
+
+  @media (max-width: $mobile-max) {
+    margin-bottom: 40px;
+  }
 }
 
 .grace-item {
   flex-basis: 33.33%;
   padding: 15px;
+
+  @media (max-width: $tablet-max) {
+    flex-basis: 50%;
+    padding: 20px;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .grace-img {
   margin: 0 auto;
   max-height: 400px;
   object-fit: contain;
+
+  @media (max-width: $tablet-max) {
+    max-height: 300px;
+  }
+
+  @media (max-width: $mobile-max) {
+    max-height: 200px;
+  }
 }
