--- a/src/styles/blocks/_lost-in-turkey.scss
+++ b/src/styles/blocks/_lost-in-turkey.scss
@@ -21,6 +21,15 @@
   font-size: 30px;
   font-weight: 600;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    margin-top: 60px;
+    font-size: 26px;
+  }
+
+  @media (max-width: $mobile-max) {
+    font-size: 24px;
+  }
 }
 
 .lost-in-turkey-desc {
@@ -29,6 +38,15 @@
   font-weight: 300;
   line-height: 30px;
   text-align: center;
+
+  @media (max-width: $tablet-max) {
+    margin-top: 25px;
+
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .lost-in-turkey-gallery {
@@ -36,15 +54,40 @@
   flex-wrap: wrap;
   align-items: center;
   margin: 65px -15px 100px -15px;
+
+  @media (max-width: $tablet-max) {
+    margin: 40px -20px 60px -20px;
+  }
+
+  @media (max-width: $mobile-max) {
+    margin-bottom: 40px;
+  }
 }
 
 .lost-in-turkey-item {
   flex-basis: 33.33%;
   padding: 15px;
+
+  @media (max-width: $tablet-max) {
+    flex-basis: 50%;
+    padding: 20px;
+  }
+
+  @media (max-width: $mobile-max) {
+
+  }
 }
 
 .lost-in-turkey-img {
   margin: 0 auto;
   max-height: 400px;
   object-fit: contain;
+
+  @media (max-width: $tablet-max) {
+    max-height: 300px;
+  }
+
+  @media (max-width: $mobile-max) {
+    max-height: 200px;
+  }
 }
