changed header size for tablet and mobile

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -6,6 +6,10 @@
   width: 100%;
   padding: 30px 0;
   background-color: $color-light;
+
+  @media (max-width: $tablet-max) {
+    padding: 25px 0;
+  }
 }
 
 .header-container {
