--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -36,6 +36,11 @@
   font-weight: 700;
   color: $color-dark;
   text-decoration: none;
+  transition: all .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+
+  &:hover {
+    opacity: .8;
+  }
 
   @media (max-width: $mobile-max) {
     font-size: 26px;
