--- a/src/styles/blocks/_social.scss
+++ b/src/styles/blocks/_social.scss
@@ -15,6 +15,7 @@
   background-position: center;
   background-size: contain;
   opacity: .6;
+  transition: all .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
 
   &:hover {
     opacity: 1;
