added ::selecrion for all text, added new podcast link, added link to dev website

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -22,6 +22,11 @@
   opacity: .6;
   text-align: center;
 
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
+
   @media (max-width: $mobile-max) {
     font-size: 17px;
   }
