--- a/src/styles/blocks/_about.scss
+++ b/src/styles/blocks/_about.scss
@@ -18,6 +18,11 @@
   font-weight: 600;
   text-align: center;
 
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
+
   @media (max-width: $tablet-max) {
     margin: 60px 0;
     font-size: 26px;
@@ -48,6 +53,11 @@
   font-size: 18px;
   font-weight: 300;
   line-height: 30px;
+
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
 }
 
 .about-list {
@@ -58,10 +68,22 @@
   list-style-position: inside;
 }
 
+.about-item {
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
+}
+
 .about-link {
   color: $color-accent;
   text-decoration: none;
   transition: all .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
 
   &:hover {
     color: rgb($color-accent, .7);
@@ -70,6 +92,10 @@
 
 .about-avatar {
   flex-basis: 30%;
+
+  img::selection {
+    background-color: $color-dark;
+  }
 
   @media (max-width: $tablet-max) {
     align-self: center;
