--- a/src/styles/blocks/_exhibitions.scss
+++ b/src/styles/blocks/_exhibitions.scss
@@ -22,6 +22,11 @@
   font-weight: 600;
   text-align: center;
 
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
+
   @media (max-width: $tablet-max) {
     margin: 60px 0;
     font-size: 26px;
@@ -37,12 +42,27 @@
   font-size: 18px;
   font-weight: 300;
   line-height: 30px;
+
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
+
+  b::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
 }
 
 .exhibitions-link {
   color: $color-accent;
   text-decoration: none;
   transition: all .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
 
   &:hover {
     color: rgb($color-accent, .7);
