--- a/src/styles/blocks/_inner-landscapes.scss
+++ b/src/styles/blocks/_inner-landscapes.scss
@@ -17,6 +17,11 @@
   font-weight: 600;
   text-align: center;
 
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
+
   @media (max-width: $tablet-max) {
     margin-top: 60px;
     font-size: 26px;
@@ -33,6 +38,11 @@
   font-weight: 300;
   line-height: 30px;
   text-align: center;
+
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
 
   @media (max-width: $tablet-max) {
     margin-top: 25px;
@@ -68,6 +78,10 @@
   margin: 0 auto;
   max-height: 400px;
   object-fit: contain;
+
+  &::selection {
+    background-color: $color-dark;
+  }
 
   @media (max-width: $tablet-max) {
     max-height: 300px;
