--- a/src/styles/blocks/_lost-in-turkey.scss
+++ b/src/styles/blocks/_lost-in-turkey.scss
@@ -18,6 +18,11 @@
   font-weight: 600;
   text-align: center;
 
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
+
   @media (max-width: $tablet-max) {
     margin-top: 60px;
     font-size: 26px;
@@ -34,6 +39,11 @@
   font-weight: 300;
   line-height: 30px;
   text-align: center;
+
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
 
   @media (max-width: $tablet-max) {
     margin-top: 25px;
@@ -69,6 +79,10 @@
   margin: 0 auto;
   max-height: 400px;
   object-fit: contain;
+
+  &::selection {
+    background-color: $color-dark;
+  }
 
   @media (max-width: $tablet-max) {
     max-height: 300px;
