--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -59,6 +59,11 @@
   text-decoration: none;
   transition: all .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
 
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
+
   &:hover {
     color: $color-accent;
   }
@@ -139,6 +144,11 @@
   color: $color-dark;
   text-decoration: none;
   transition: all .3s 0s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+
+  &::selection {
+    color: $color-light;
+    background-color: $color-dark;
+  }
 
   &:hover {
     color: $color-accent;
